# rust_write_to_log

./: Cargo.toml  README.md
src/: main.rs
src/log/: formatter.rs  mod.rs  writer.rs
